--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "etna-machine-learning",
   "version": "0.0.1",
   "description": "School Project by Les 6 Pc",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
