--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "gitHead": "40d721c0d5b25b1b852d0474ad7fd144503acda5",
   "dependencies": {
     "express": "~4.13.3",
-    "tuiter": "~0.2.12"
+    "tuiter": "~0.2.12",
+    "machine_learning": "0.0.8"
   }
 }
