--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "description": "School Project by Les 6 Pc",
   "main": "index.js",
-  "scripts": {
+    "scripts": {
+	"start":"node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
