Package updated && ajout de limdu

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "colors": "^1.1.2",
     "express": "~4.13.3",
     "helmet": "^1.0.1",
+    "limdu": "^0.8.0",
     "lodash": "~3.10.1",
     "machine_learning": "0.0.8",
     "q": "^1.4.1",
